--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,6 @@
  
 /* User Interface Design */
 
-
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -139,7 +138,6 @@
 
 /* Visual Communication */
 
-
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -190,7 +188,6 @@
     float:left;
   }
 
-
   /* Phone Devices Query */
   @media only screen and (max-width: 37.5em) {
     div.card-image img {
@@ -207,28 +204,42 @@
 
 /* MyWork */
 
-div.workGrid{
- display:grid;  
- grid-template-areas:'myArea myArea myArea myArea' 
-}
 
-.item1 {
-    grid-area: myArea;
+* {
+    box-sizing: border-box;
   }
   
-  .grid-container {
-    display: grid;
-    grid-template-areas: 'myArea myArea myArea myArea myArea';
-    grid-gap: 10px;
-    background-color: #2196F3;
+  /* Create two equal columns that floats next to each other */
+  .column {
+    float: left;
+    width: 50%;
     padding: 10px;
   }
   
-  .grid-container > div {
-    background-color: rgba(255, 255, 255, 0.8);
-    text-align: center;
-    padding: 20px 0;
-    font-size: 30px;
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
+  /* Style the buttons */
+  .btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    background-color: #ddd;
+  }
+  
+  .btn.active {
+    background-color: #666;
+    color: white;
+  }
+
+  
 
 
