--- a/css/style.css
+++ b/css/style.css
@@ -1,212 +1,137 @@
+/* navigation */
 
-/* User Research */
+li{
+    display:inline-block;
+    vertical-align:top;
+    margin:0 40px;
+  }
+  
+  .logo{
+    text-align:center;
+    width:10%;
+    padding:1%;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+  
+    }
+  
+  nav{
+    flex-direction:row;
+    background-color:lightblue;
+    width:100%;
+    padding:1%;
+    text-align:center;
+  }
+  
+  /* Content styles */
+  
+  ul{
+    width:50%;
+    margin-left:auto;
+    margin-right:auto;
+  }
+  
+  .herolmg {
+    height:600px;
+    padding:25px;
+  }
+  
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .content{
+    width:500px;
+    margin:0 auto;
+  }
+  
+  
+  
+  .button{
+    background-color:lightseagreen;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align:center;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  
+  
+  
 
-.flex-container{
-    display:flex;
-}
 
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
 
-.container {
-    padding: 2px 16px;
+
+
+
+
+
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
   }
 
-  .float-layout {
-    padding: 5px 5px;
-    float: left;
-    width: 100%;
-    height: auto;
+
+/* My Skills */
+* {
     box-sizing: border-box;
-    margin: 0;
   }
   
-  .card-container {
-    overflow: hidden;
-  }
-  
-  .card {
-    background-color: skyblue;
-    color: black;
-    height: 50%;
-    width: 40%;
-    float: center;
-    margin-bottom:20px;
-  }
-  
-  .card-title {
-    font-size: 25px;
-    text-align: left;
-    font-weight: bold;
-    padding-top: 12px;
-  }
-  
-  .card-desc {
-    padding: 10px;
-    text-align: left;
-    font-size: 17px;
-  }
-  
-  div.card-image img {
-    width: 5%;
-    height: auto;
-    float:left;
-  }
 
-
-  /* Phone Devices Query */
-  @media only screen and (max-width: 37.5em) {
-    div.card-image img {
-      width: 100%;
-      height: auto;
-    }
-  
-    .card {
-      width: 100%;
-      margin-top: -4px;
-    }
-}
- 
-/* User Interface Design */
-
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
-
-.container {
-    padding: 2px 16px;
-  }
-
-  .float-layout {
-    padding: 5px 5px;
+  /* Float four columns side by side */
+  .column1 {
     float: left;
-    width: 100%;
-    height: auto;
-    box-sizing: border-box;
-    margin: 0;
+    width: 33.33%;
+    padding:0 10px;
   }
   
-  .card-container {
-    overflow: hidden;
+  /* Remove extra left and right margins, due to padding */
+  .row1 {margin: 0 -5px;}
+  
+  /* Clear floats after the columns */
+  .row1:after {
+    content: "";
+    display: table;
+    clear: both;
   }
   
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .column1 {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
+  /* Style the counter cards */
   .card {
-    background-color: skyblue;
-    color: black;
-    height: 50%;
-    width: 40%;
-    float: center;
-  }
-  
-  .card-title {
-    font-size: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
     text-align: left;
-    font-weight: bold;
-    padding-top: 12px;
+    background-color: #f1f1f1;
   }
+    
+
   
-  .card-desc {
-    padding: 10px;
-    text-align: left;
-    font-size: 17px;
-  }
-  
-  div.card-image img {
-    width: 10%;
-    height: auto;
-    float:left;
-  }
 
 
-  /* Phone Devices Query */
-  @media only screen and (max-width: 37.5em) {
-    div.card-image img {
-      width: 100%;
-      height: auto;
-    }
-  
-    .card {
-      width: 100%;
-      margin-top: -4px;
-    }
-}
 
-/* Visual Communication */
 
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-}
 
-.container {
-    padding: 2px 16px;
-  }
 
-  .float-layout {
-    padding: 5px 5px;
-    float: left;
-    width: 100%;
-    height: auto;
-    box-sizing: border-box;
-    margin: 0;
-  }
-  
-  .card-container {
-    overflow: hidden;
-  }
-  
-  .card {
-    background-color: skyblue;
-    color: black;
-    height: 50%;
-    width: 40%;
-    float: center;
-  }
-  
-  .card-title {
-    font-size: 25px;
-    text-align: left;
-    font-weight: bold;
-    padding-top: 12px;
-  }
-  
-  .card-desc {
-    padding: 10px;
-    text-align: left;
-    font-size: 17px;
-  }
-  
-  div.card-image img {
-    width: 10%;
-    height: auto;
-    float:left;
-  }
-
-  /* Phone Devices Query */
-  @media only screen and (max-width: 37.5em) {
-    div.card-image img {
-      width: 100%;
-      height: auto;
-    }
-  
-    .card {
-      width: 100%;
-      margin-top: -4px;
-    }
-}
 
 
 /* MyWork */
 
-
 * {
-    box-sizing: border-box;
+    box-sizing: boarder-box;
   }
   
   /* Create two equal columns that floats next to each other */
@@ -239,6 +164,35 @@
     background-color: #666;
     color: white;
   }
+
+  .button {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
+
+
+
+  /* Footer Styles */
+
+footer{
+    background-color:lightblue;
+    display:inline-block;
+    align-items:center;
+    width:100%;
+    padding:1%;
+  }
+  
+  
+  .footer a{
+   display:inline-block;
+   vertical-align:top;
+   padding:3px;
+  }
+  
+  
 
   
 
