--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ body {
     float: left;
     width: 33.33%;
     padding:0 10px;
+
   }
   
   /* Remove extra left and right margins, due to padding */
@@ -78,7 +79,9 @@ body {
   }
   
   /* Responsive columns */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 600px) 
+  
+  {
     .column1 {
       width: 100%;
       display: block;
@@ -90,7 +93,7 @@ body {
   .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
-    text-align: left;
+    text-align: center;
     background-color: #f1f1f1;
   }
     
@@ -107,6 +110,7 @@ body {
     float: left;
     width: 50%;
     padding: 10px;
+   
   }
   
   /* Clear floats after the columns */
@@ -129,7 +133,7 @@ body {
   }
   
   .btn.active {
-    background-color: #666;
+    background-color: lightcyan;
     color: white;
   }
 
@@ -158,7 +162,7 @@ footer{
   .footer a{
    display:inline-block;
    vertical-align:top;
-   padding:3px;
+   padding:2px;
   }
   
   
