--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ body {
   }
   
   /* Remove extra left and right margins, due to padding */
-  .row1 {margin: 0 -5px;}
+  .row1 {margin: 0 -5px;
+}
   
   /* Clear floats after the columns */
   .row1:after {
@@ -79,14 +80,12 @@ body {
   }
   
   /* Responsive columns */
-  @media screen and (max-width: 600px) 
-  
-  {
-    .column1 {
+  @media screen and (max-width: 600px){ 
+    {.column1 
       width: 100%;
       display: block;
-      margin-bottom: 20px;
-    }
+      flex-direction:row-reverse;
+  }
   }
   
   /* Style the counter cards */
@@ -95,59 +94,58 @@ body {
     padding: 16px;
     text-align: center;
     background-color: #f1f1f1;
+    height:100%;
   }
     
 
   
 /* MyWork */
 
-* {
-    box-sizing: boarder-box;
-  }
-  
-  /* Create two equal columns that floats next to each other */
-  .column {
-    float: left;
-    width: 50%;
-    padding: 10px;
-   
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  /* Style the buttons */
-  .btn {
-    border: none;
-    outline: none;
-    padding: 12px 16px;
-    background-color: lightskyblue;
-    cursor: pointer;
-  }
-  
-  .btn:hover {font-family:Verdana, Geneva, Tahoma, sans-seriffont-family, Verdana, Geneva, Tahoma, sans-serif;
-    background-color: #ddd;
-  }
-  
-  .btn.active {
-    background-color: #bac9ff;
-    color: white;
-  }
+.grid-container {
+  display:grid;
+  grid-template-columns: auto auto;
+  background-color: #987fb2;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-left:50px;
+  margin-right:50px;
+ 
+}
 
-  .button {
-    border: none;
-    outline: none;
-    padding: 12px 16px;
-    background-color: #f1f1f1;
-    cursor: pointer;
-    text-align: center;
-  }
+.item1{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 12px;
+  text-align: center;
+}
+
+.item2{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 12px;
+  text-align: center;
+}
+
+.item3{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 12px;
+  text-align: center;
+}
+
+.item4{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 12px;
+  text-align: center;
+}
 
 
-
+  
 
   /* Footer Styles */
 
